--- a/src/styles.css
+++ b/src/styles.css
@@ -196,7 +196,7 @@ body {
   margin: 0rem;
   background-color: var(--color-white);
 
-  padding: 5rem 5rem;
+  padding: 5rem 10rem;
 }
 
 .projects-container {
